<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:openDrawer="end"
    android:id="@+id/drawer"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".ForgetPass">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo200" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/forgotPassword"
            android:textSize="30sp"
            android:layout_below="@id/logo"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailReset"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_round"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAlignment="center"
        android:layout_below="@+id/ForgetPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textColorHint="@color/darkBlue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetB"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/Resetpass"
        android:background="@drawable/button_round"
        android:textColor="@color/white"
        android:layout_below="@+id/emailReset"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>