<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:openDrawer="end"
    android:id="@+id/drawer"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".EditInfo">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updateprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/editProfile"
                android:textSize="30sp" />

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateprofile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstNameU"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_round"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/darkBlue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lastNameU"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_round"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/darkBlue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailU"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_round"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/darkBlue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneU"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_round"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:maxLength="10"
                    android:textColorHint="@color/darkBlue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="240dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:text="@string/birthdate"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/birthdateU"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="180dp"
                    android:background="@drawable/edit_round"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/darkBlue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/userNameU"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_round"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/darkBlue"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changePass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="370dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_round"
                android:text="@string/changepass"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="450dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/choosePhotoU"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/button_round"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/changeImage"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/personalImgU"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/imagepreview"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_round"
                android:text="@string/updateInfo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="580dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_round"
                android:text="@string/deleteAccount"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="660dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"/>

        </FrameLayout>

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:menu="@menu/menu_item"
        app:headerLayout="@layout/header"
        android:background="@color/blue"
        android:layout_gravity="start"
        app:itemTextColor="#fff"/>

</androidx.drawerlayout.widget.DrawerLayout>